# ace

./: .coverage  .gitignore  .pylintrc  .travis.yml  MANIFEST.in  MISHA_140.tsv  README.html  README.md  environment.yml  lint.sh  pyproject.toml  setup.py  unittest.sh
.github/workflows/: main.yml
ACE.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
acegui/: ace_gui.py
acegui/res/: index.html  index.js  style.css
acegui/views/: about.html  configuration.html  configuration.js  faq.html  generate.html  generate.js  hit_peptides.html  hit_peptides.js  identify.html  identify.js  index.html  index.js  inputs.js  landing.html  style.css
acelib/: __init__.py  constants.py  default_parameters.py  devtools.py  identification.py  logger.py  main.py  peptide.py  sequence_features.py  solver.py  utils.py  verification.py  visualization.py
acelib/cli/: ace_generate.py  ace_identify.py  ace_main.py  ace_verify.py  ace_visualize.py
docs/: _quarto.yml  deconvolve.html  deconvolve.qmd  developer_notes.html  developer_notes.qmd  faq.qmd  generate.html  generate.qmd  identify.html  identify.qmd  index.html  index.qmd  python_api.html  python_api.qmd  search.json  verify.html  verify.qmd
docs/.quarto/idx/: generate.qmd.json  identify.qmd.json  index.qmd.json  python_api.qmd.json  verify.qmd.json
docs/.quarto/xref/: 14652b1b  34a18bb7  36c7f754  INDEX  (+1 more)
docs/_site/: generate.html  identify.html  index.html  python_api.html  verify.html
docs/docs/: index.html  style.css
examples/: 120peptides_12perpool_3x.csv  25peptides_5perpool_3x_golfy.csv  run_ace_deconvolve.sh  run_ace_generate.sh  run_ace_generate_1.sh  run_ace_generate_2.sh  run_ace_generate_3.sh  run_ace_generate_4.sh  run_ace_identify.sh  run_ace_verify.sh  test.sh
gui/: ACE.spec  ace_gui.py
gui/views/: about.html  configuration.html  deconvolve.html  deconvolve.js  faq.html  generate.html  generate.js  hit_peptides.html  index.html  loading.html  style_old.css  test.html  test.js  test.py
notebooks/: .~lock.elispot_plate_reader.xlsx#  Tiling_Window_COVID_SPIKE_9mers.csv  elispot_plate_reader.xlsx  held_out_data_w_negatives.csv  output_csv.csv  rojas_et_al_nature_2023.csv  sekine_et_al_cell_2020.csv  sequence_properties.ipynb  test_96_peptides_ace_configuration.xlsx  test_w_neg.csv  train_w_neg.csv  training_history_negative_injections.csv  validation_experiments.ipynb
notebooks/.ipynb_checkpoints/: sequence_properties-checkpoint.ipynb
playground/: 25peptides_5perpool_3x.csv  test.py  test.sh
resources/: 100peptides_10perpool_2x.csv  100peptides_5perpool_3x.csv  100peptides_5perpool_4x.csv  120peptides_8perpool_2x.csv  25peptides_5perpool_3x.csv
scripts/: ace_generate_elispot_configuration.py
src/ace.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/acelib/: __init__.py  aid_plate_reader.py  block_assignment.py  block_design.py  constants.py  deconvolution.py  deconvolved_peptide.py  deconvolved_peptide_set.py  default_parameters.py  defaults.py  elispot.py  logger.py  main.py  peptide.py  peptide_set.py  plate_readout.py  plate_readout_entry.py  plate_well.py  pool.py  sequence_features.py  third_party_api.py  types.py  utilities.py
test/: conftest.py  data.py  test_block_assignment.py  test_block_design.py  test_deconvolve.py  test_generate.py  test_generate_1.py  test_generate_2.py  test_generate_vanilla.py  test_identify.py  test_identify_1.py  test_plate_readout.py  test_verify.py  test_verify_1.py  test_verify_2.py  test_visualize.py  test_visualize_1.py
test/data/: 100peptide_sequences.xlsx  100peptides_5perpool_3x.csv  25peptide_sequences.csv  25peptide_sequences.xlsx  25peptides_5perpool_3x.csv  25peptides_5perpool_3x_aid-plate-reader_readout.xlsx  25peptides_5perpool_3x_aid-plate-reader_readout_deconvolved.xlsx  25peptides_5perpool_3x_aid_plate_reader_simulated_results.xlsx  25peptides_5perpool_3x_configuration.xlsx  25peptides_5perpool_3x_configuration_without_coverage_ids.xlsx  25peptides_5perpool_3x_noseqsim_sat-solver.xlsx  25peptides_5perpool_3x_pool-id_readout.xlsx  25peptides_5perpool_3x_pool-id_readout_deconvolved.xlsx  25peptides_5perpool_3x_readout_aid-plate-reader.xlsx  25peptides_5perpool_3x_readout_aid-plate-reader_deconvolved.xlsx  25peptides_5perpool_3x_readout_pool-ids.xlsx  25peptides_5perpool_3x_readout_pool-ids_deconvolved.xlsx  25peptides_5perpool_3x_simulated_results.csv  elispot_configuration_disallowed_pairs_sample.tsv  elispot_configuration_sample.tsv  elispot_readout_sample.tsv  example.xlsx  test_100_peptides.csv  test_50_peptides.csv  test_96_peptides.csv
(+26 files in other folders)
