# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


[build-system]
requires = [
    "setuptools>=40.8.0",
    "pandas>=1.5.2",
    "numpy>=1.23.1",
    "ortools>=9.3.10497",
    "torch",
    "transformers",
    "openpyxl"
]

[project]
name = "ace"
version = "0.0.7.0"
requires-python = ">=3.7"
keywords = [
    "elispot assay",
    "assay optimization",
    "immunological assay",
    "deconvolution"
]
classifiers = [
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
ace = "acelib.cli.cli_main:run"

