# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


[build-system]
requires = [
    "setuptools>=40.8.0",
    "pandas>=1.5.2",
    "numpy>=1.23.1",
    "ortools>=9.3.10497",
    "torch",
    "transformers==4.30.2",
    "scikit-learn",
    "openpyxl",
    "golfy>=2.5.0",
    "Levenshtein"
]

[project]
name = "ace-elispot"
version = "0.1.1.0"
description = "ELISpot configuration generation and pool spot count deconvolution"
requires-python = ">=3.10"
readme = "README.md"
keywords = [
    "elispot",
    "assay optimization",
    "immunological assay",
    "deconvolution",
    "high-throughput assay"
]
classifiers = [
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
acelib = ["resources/models/*.pt"]

[project.scripts]
ace = "acelib.cli.cli_main:run"

[project.urls]
"Homepage" = "https://github.com/pirl-unc/ace"
"Bug Tracker" = "https://github.com/pirl-unc/ace"