# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


[build-system]
requires = [
    "setuptools==72.1.0",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "scipy==1.15.2",
    "scikit-learn==1.6.1",
    "openpyxl==3.1.5",
    "pyinstaller==6.13.0",
    "transformers==4.30.2",
    "eel==0.18.1",
    "golfy==2.5.0",
    "levenshtein==0.27.1",
    "networkx==3.4.2",
    "ortools==9.8.3296",
    "torch==2.2.2",
    "pillow==11.1.0"
]

[project]
name = "ace-elispot"
version = "0.1.2.0"
description = "ELISpot configuration generation and pool spot count deconvolution"
requires-python = "==3.10.13"
readme = "README.md"
keywords = [
    "elispot",
    "assay optimization",
    "immunological assay",
    "deconvolution",
    "high-throughput assay"
]
classifiers = [
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
acelib = ["resources/models/*.pt"]

[project.scripts]
ace = "acelib.cli.cli_main:run"

[project.urls]
"Homepage" = "https://github.com/pirl-unc/ace"
"Bug Tracker" = "https://github.com/pirl-unc/ace"